--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Welcome to Page 1</h1>
     <p>This is the content of Page 2.</p>
-    <a href="index.html">Go back to Page 1</a>
+    <a href="index.html">Go back to Home</a>
   </div>
 </body>
 </html>
